--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -15,10 +15,6 @@ spring:
       maxWait: 60000
       timeBetweenEvictionRunsMillis: 60000
       minEvictableIdleTimeMillis: 300000
-sa-token:
-  token-name: dogart
-  timeout: 2592000
-  activity-timeout: -1
-  is-concurrent: false
-  is-share: false
-  token-style: uuid
+jwt:
+  secret: p4aYscWKd4fzB4
+  expiration: 86400
