--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -5,7 +5,7 @@ spring:
     name: dogart-api
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/dog?serverTimezone=UTC
+    url: jdbc:mysql://localhost:3306/dogart?serverTimezone=UTC
     username: root
     password: 123456
     druid:
