--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -7,7 +7,7 @@ spring:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/dogart?serverTimezone=UTC
     username: root
-    password: 123456
+    password:
     druid:
       initial-size: 5
       min-idle: 5
@@ -15,6 +15,13 @@ spring:
       maxWait: 60000
       timeBetweenEvictionRunsMillis: 60000
       minEvictableIdleTimeMillis: 300000
+  redis:
+    host: localhost
+    port: 6379
+    password:
+    timeout: 3000
+    database: 0
+
 jwt:
   secret: p4aYscWKd4fzB4
   expiration: 86400
